# mini_program_backend

./: .env  .gitignore  Dockerfile  app.py  my.cnf  nginx.conf  pyproject.toml  requirements.txt  run_flask_docker.sh  run_mysql_docker.sh  run_nginx_docker.sh  settings.py  邮箱验证界面.txt
blueprints/: __init__.py  route.py
blueprints/Models/: AddressModel.py  CartModel.py  CategoryModel.py  GoodsDetailModel.py  HomeModel.py  HotModel.py  OrderModel.py  ProfileModel.py  UserLoginModel.py  UserModel.py
blueprints/manage_api/: account.py  auth.py  dashboard.py  inventory.py  orderlist.py  workbench.py
blueprints/mini_program_api/: address.py  auth.py  cart.py  category.py  goods.py  home.py  hot.py  login.py  manage.py  order.py  pay.py  profile.py
blueprints/utils/: cart_uitl.py  curd.py  email_util.py  hot_util.py  location_util.py  manage_account_util.py  mini_program_email_util.py  orderlist_util.py  parse_goods_field_util.py  read_excel.py  response_util.py  token.py
