[project]
name = "apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "flask-cors==5.0.0",
    "flask==3.1.0",
    "flask-mail==0.10.0",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "requests==2.32.3",
    "returns==0.24.0",
    "sqlalchemy==2.0.36",
    "werkzeug==3.1.3",
    "pymysql>=1.1.1",
    "pythonenv>=0.0.34",
    "cryptography>=44.0.0",
]
